# mcujs

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASING.md  ROADMAP.md  WAVESHARE_SCREEN_DEVELOPMENT.md  build.sh  docker-entrypoint.sh  package.json  pico_sdk_import.cmake
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: board_support.yml  bug_report.yml  feature_request.yml
.github/workflows/: README.md  ci.yml  configure-pages-dns.yml  docs.yml  release.yml
board/: board.h  flash_config.h
board/adafruit_feather_rp2040/: board_config.cmake  board_config.h  memmap_mcujs.ld
board/pico/: board_config.cmake  board_config.h  memmap_mcujs.ld
board/pico2/: board_config.cmake  board_config.h  memmap_mcujs.ld
board/pico2_w/: board_config.cmake  board_config.h
board/waveshare_rp2040_pizero/: board_config.cmake  board_config.h  waveshare_rp2040_pizero_phases.md
board/waveshare_rp2040_touch_lcd_1.28/: board_config.cmake  board_config.h  memmap_mcujs.ld
board/waveshare_rp2040_zero/: board_config.cmake  board_config.h  memmap_mcujs.ld
board/waveshare_rp2350_lcd_1.47_a/: board_config.cmake  board_config.h  memmap_mcujs.ld
board/waveshare_rp2350_touch_lcd_1.69/: board_config.cmake  board_config.h
docs/: docusaurus.config.ts  package-lock.json
docs/docs/: advanced-building.md  api-reference.md  architecture.md  built-in-modules.md  contributing.md  debugging-recovery.md  glossary.md  hardware-boards.md  intro.md  javascript-basics.md  limitations.md  meet-chippy.md  overview.md  quick-start.md  roadmap.md  runtime-basics.md  runtime-javascript.md  tutorials.md
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
drivers/: dvi.js  st7789.js
examples/: README.md
examples/blink/: blink.js  index.js
examples/button/: index.js
examples/config/: index.js
examples/hello/: index.js
examples/i2c-scan/: index.js
examples/modules/: index.js
examples/pwm-fade/: index.js
examples/waveshare-lcd-1.28/: cst816s.js  demo-fps.js  demo-imu.js  demo-slideshow.js  demo-touch-draw.js  font5x7.js  gc9a01a.js  qmi8658.js  screen.js  test-backlight.js  test-display.js  test-driver.js  test-graphics.js  test-image.js  test-minimal.js  test-screen-api.js  test-screen.js  test-spi-basic.js  test-step.js
examples/waveshare-lcd-1.47/: demo-fps.js  demo-image.js  demo-rainbow.js  demo-shapes.js  demo-slideshow.js  screen.js  st7789v3.js  test-all.js  test-blue.js  test-features.js  test-jpeg.js
examples/waveshare-lcd-1.69/: buzzer.js  cst816s.js  demo-buzzer.js  demo-fps.js  demo-imu.js  demo-slideshow.js  demo-touch.js  qmi8658.js  screen.js  st7789v2.js
examples/waveshare_rp2040_pizero/: README.md  bouncing-balls.js  digital-clock.js  jpeg-slideshow.js  pong.js  rainbow.js  slideshow.js
host/: CMakeLists.txt  engine.c  engine.h  jerry_port.c  module_loader.c  module_loader.h
host/bindings/: CMakeLists.txt  adc.c  bindings.c  bindings.h  board.c  console.c  dvi.c  fs.c  gpio.c  graphics.c  graphics.h  i2c.c  image.c  image.h  keyboard.c  mcujs_dvi.h  mouse.c  neopixel.c  neopixel.h  neopixel.pio  neopixel_utils.h  process.c  pwm.c  require.c  screen.c  screen.h  spi.c  timers.c
javascript/: CMakeLists.txt
lib/waveshare_rp2040_pizero/: display.js
scripts/: boards.sh  configure-github-domain-verification.sh  configure-pages-dns.sh  finalize-pages-cutover.sh  package-release.sh  release.sh  verify-release.sh
scripts/lib/: boards.sh
src/: CMakeLists.txt  board.c  boot.c  boot.h  main.c  repl.c  repl.h
src/filesystem/: diskio.c  ffconf.h  flash_ops.c  flash_ops.h  fs.c  fs.h
src/usb/: tusb_config.h  usb_cdc.c  usb_cdc.h  usb_descriptors.c  usb_hid.c  usb_hid.h  usb_msc.c  usb_msc.h
tests/: e2e.test.js
tests/helpers/: device.js
